syntax = "proto3";

package users;

import "google/protobuf/empty.proto";
// import "google/api/annotations.proto";

enum UserStatus {
    UNKNOWN = 0;
    OFFLINE = 1;
    BUSY = 2;
    AVAILABLE = 3;
}

message User {
    int32 id = 1;
    string name = 2;
    int32 age = 3;
    UserStatus status = 4;
}

message UserList {
    repeated User User = 1;
}

service Users {
    rpc GetUsers(google.protobuf.Empty) returns (UserList) {
        // option (google.api.http) = {
        //     get: "/v1/user"
        //   };
    };
    rpc CreateUser(User) returns (google.protobuf.Empty) {
        // option (google.api.http) = {
        //     post: "/v1/user"
        //     body: "*"
        //   };
    };
} 
